@@ -2069,3 +2069,5 @@
 * pheno:   added goomba flag 32 - falling corpses won't cause damage
 * pheno:   added g_shrubbotOptions bitflag cvar (see docs)
 * pheno:   added death anim and medic call to playdead command
+* pheno:   fixed server crash when calling shrubbot command with [i] shortcut
+           at server console
